# omnichannel-commerce-data-platform

./: .bruin.yml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: dbt-checks.yml  deploy-gcp.yml  integration.yml  lint.yml  tests.yml
config/: base.yaml  dev.yaml  prod.yaml  topics.yaml
dashboard/: app.py
data/sample/batch/: .gitignore  dummyjson_products_sample.json  olist_manifest.yaml  olist_manifest.yaml.dvc  open_food_facts_products_sample.json  open_food_facts_products_sample.json.dvc
data/sample/streaming/: .gitignore  retailrocket_events.jsonl  retailrocket_events.jsonl.dvc
docs/: architecture.md
infra/terraform/gcp/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
kafka/: README.md  create_topics.sh  topics.yaml
nosql/mongodb/: init.js
omnichannel_platform/: __init__.py
orchestration/kestra/: README.md
orchestration/kestra/flows/: daily_platform_ingestion.yml
orchestration/kestra/namespace/: dev.md
pipeline/: ingest_enrichments.py  ingest_olist.py  ingest_streaming.py  pipeline.yml  quality_checks.py  transform_dbt.py
quality/: README.md
quality/contracts/: marts_commerce.yml  raw_olist_orders.yml  raw_retailrocket_events.yml  reference_enrichments.yml
quality/expectations/: marts_commerce_orders_unique.sql  raw_olist_orders_not_null.sql  raw_retailrocket_event_types.sql  reference_fx_positive.sql  reference_open_food_facts_products_not_null.sql
spark/: README.md
spark/conf/: spark-defaults.conf.example
spark/jobs/: clickstream_sessionization.py
sql/postgres/init/: 001_create_local_warehouse_schemas.sql  002_create_raw_placeholder_tables.sql
sql/postgres/queries/: raw_data_healthcheck.sql
src/omnichannel_platform/: __init__.py
src/omnichannel_platform/api/: __init__.py  database.py  main.py  models.py
src/omnichannel_platform/batch/: __init__.py  commerce_batch_ingestion.py  orders_ingestion.py  source_plans.py
src/omnichannel_platform/common/: __init__.py  clients.py  io.py  logging.py  settings.py
src/omnichannel_platform/dashboard/: __init__.py  logic.py
src/omnichannel_platform/nosql/: __init__.py
src/omnichannel_platform/orchestration/: __init__.py
src/omnichannel_platform/quality/: __init__.py  gx_validation.py  rules_catalog.py
tests/: conftest.py
tests/fixtures/: sample_orders.json
tests/integration/: test_module_resolution.py  test_repository_foundations.py
tests/unit/: test_api_routes.py  test_batch_helpers.py  test_clients.py  test_dashboard_insights.py  test_dashboard_logic.py  test_frankfurter_edge_cases.py  test_frankfurter_payload.py  test_ingestion_plans.py  test_olist_seed_determinism.py  test_quality_assets.py  test_sample_fixtures.py  test_settings.py
warehouse/dbt/: README.md  dbt_project.yml  profiles.ci.yml  profiles.yml.example
(+29 files in other folders)
