[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnichannel-commerce-data-platform"
version = "0.1.0"
description = "Production-style Data Engineering portfolio for omnichannel commerce analytics."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Abderrahmen Mansour" }
]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0,<5.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]
batch = [
  "click>=8.3.1",
  "pandas>=2.3,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pyarrow>=15,<22.0.0",
  "requests>=2.32,<3.0",
  "sqlalchemy>=2.0.44",
  "tqdm>=4.67,<5.0",
]
streaming = [
  "kafka-python-ng>=2.2,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0.44",
]
warehouse = [
  "dbt-bigquery>=1.9,<2.0",
  "dbt-duckdb>=1.9,<2.0",
  "dbt-postgres>=1.9,<2.0",
]
nosql = [
  "pymongo>=4.8,<5.0",
]
quality = [
  "great-expectations>=1.2,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0.44",
]
spark = [
  "pyspark>=3.5,<4.0",
]
dashboard = [
  "pandas>=2.3,<3.0",
  "streamlit>=1.38,<2.0",
  "plotly>=5.24,<6.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0.44",
]
all = [
  "omnichannel-commerce-data-platform[batch,streaming,warehouse,nosql,quality,spark,dashboard]",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
